name: react-docgen-types
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright Piotr Bogdan (c) 2017
maintainer: ppbogdan@gmail.com
synopsis: Data types and Aeson instances for parsing output of react-docgen.
description:
    Data types and Aeson instances for parsing output of react-docgen.
category: Web
author: Piotr Bogdan
extra-source-files:
    ChangeLog.md

library
    exposed-modules:
        React.Docgen.Types
    build-depends:
        base >=4.9 && <4.10,
        aeson >=1.0 && <1.3,
        bytestring >=0.10.8 && <0.11,
        text >=1.2.2 && <1.3,
        unordered-containers >=0.2.8 && <0.3,
        protolude >=0.1.10 && <0.2,
        lens >=4.15.1 && <4.16,
        lens-aeson >=1.0.0 && <1.1
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: src

